--- a/charts/my-webapp/templates/deployment.yaml
+++ b/charts/my-webapp/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Chart.Name }}
+  tier: {{ .Values.tier }}
   labels:
     app: {{ .Chart.Name }}
 spec:
