--- a/argocd-apps/production.yaml
+++ b/argocd-apps/production.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: my-webapp-prod
   namespace: argocd
+  labels:
+    tier: production
 spec:
   project: default
   source:
