--- a/argocd-apps/staging.yaml
+++ b/argocd-apps/staging.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: my-webapp-staging
   namespace: argocd
+  labels:
+    tier: staging
 spec:
   project: default
   source:
